--- a/frontend/src/components/ChessGamePage.scss
+++ b/frontend/src/components/ChessGamePage.scss
@@ -1,23 +1,18 @@
 .game-chat-container {
   display: flex;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
-.connecting-loader-wrapper {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, .3);
-
-  .loader-spinner {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: 10px solid gray;
-    border-top: 10px solid white;
-    animation: spin 1s infinite;
-  }
+.loader-spinner {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 10px solid gray;
+  border-top: 10px solid white;
+  animation: spin 1s infinite;
 }
 
 @keyframes spin {
