--- a/frontend/src/components/Chat.scss
+++ b/frontend/src/components/Chat.scss
@@ -13,4 +13,9 @@
     flex: 1;
     background-color: antiquewhite;
   }
+
+  @media screen and (max-width: 768px) {
+    height: 300px;
+    width: 500px;
+  }
 }
