--- a/web/src/components/ChessGamePage.scss
+++ b/web/src/components/ChessGamePage.scss
@@ -1,5 +1,8 @@
-.game-chat-container {
+.game-chat-wrapper {
   display: flex;
+  margin: 100px 0;
+  justify-content: center;
+  gap: 20px;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
@@ -21,5 +24,28 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.waiting-room {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: white;
+  padding: 48px;
+  border-radius: 8px;
+
+  .room-id-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .room-id-label {
+    background-color: #f1f1f1;
+    flex: 1;
+    padding: 8px;
+    color: #0093ff;
   }
 }
