added custom FEN

--- a/web/src/components/JoinARoomModal.scss
+++ b/web/src/components/JoinARoomModal.scss
@@ -17,6 +17,17 @@
     flex-direction: column;
   }
 
+  .FEN {
+    width: 320px;
+  }
+
+  span {
+    color: red;
+    font-size: 12px;
+    padding: 4px;
+    font-weight: bold;
+  }
+
   .btn-wrapper {
     flex-basis: 50px;
   }
