--- a/web/src/components/Modal.scss
+++ b/web/src/components/Modal.scss
@@ -1,10 +1,7 @@
 .modal {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
+  inset: 0;
+  z-index: 6;
   background-color: rgba(0, 0, 0, .3);
   display: flex;
   justify-content: center;
