--- a/web/src/components/Chat.scss
+++ b/web/src/components/Chat.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  word-break: break-all;
+  word-break: break-word;
   max-height: 500px;
   width: 300px;
   border-radius: 4px;
