--- a/web/src/components/Chat.scss
+++ b/web/src/components/Chat.scss
@@ -34,7 +34,7 @@
     .message {
      padding: 6px 10px;
      margin: 3px 0;
-     border-radius: 100px;
+     border-radius: 1em;
      &.them {
       //  background-color: #333;
        background-color: rgb(92, 177, 247);;
