--- a/web/src/components/Modal.scss
+++ b/web/src/components/Modal.scss
@@ -1,9 +1,9 @@
 .modal {
-  position: fixed;
-  inset: 0;
-  z-index: 6;
-  background-color: rgba(0, 0, 0, .3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: fixed;
+	inset: 0;
+	z-index: 6;
+	background-color: rgba(0, 0, 0, 0.3);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
