--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -1,39 +1,40 @@
-html, body {
-  margin: 0;
-  background-color: #f1f1f1;
+html,
+body {
+	margin: 0;
+	background-color: #f1f1f1;
 }
 
 * {
-  font-family: Arial, serif;
+	font-family: Arial, serif;
 }
 
 input {
-  padding: 10px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  background-color: #f6f6f6;
-  font-family: Arial, serif;
-  min-width: 0;
-  font-size: 15px;
+	padding: 10px;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	background-color: #f6f6f6;
+	font-family: Arial, serif;
+	min-width: 0;
+	font-size: 15px;
 }
 
 button {
-  background-color: #111111;
-  color: #f1f1f1;
-  font-weight: bold;
-  padding: 10px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  display: inline-flex;
-  justify-content: center;
+	background-color: #111111;
+	color: #f1f1f1;
+	font-weight: bold;
+	padding: 10px;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	display: inline-flex;
+	justify-content: center;
 
-  &:hover {
-    background-color: #222;
-  }
+	&:hover {
+		background-color: #222;
+	}
 }
 
 .StartButton:hover {
-  cursor:auto;
+	cursor: auto;
 }
